fixing the contrast issues using css

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: #f5f5f5;
   margin: 0;
   padding: 0;
 }
@@ -39,7 +39,7 @@ img {
 
 .main-nav ul li a {
   display: block;
-  color: inherit;
+  color: #000;
   text-decoration: none;
   font-size: 1.25rem;
 }
@@ -50,6 +50,8 @@ form textarea {
   width: 100%;
   margin-bottom: 1rem;
   padding: .5rem 1rem;
+  color: #000;
+  background-color: #fff;
 }
 
 form textarea {
@@ -64,8 +66,11 @@ form button {
   border: 2px solid black;
   padding: 1rem;
   text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
 }
 
 .site-footer {
   padding: 2rem 0;
+  color: #000;
 }
